# kube-scheduler-rs

./: .gitignore  404.html  Cargo.toml  Dockerfile  devspace.yaml  devspace_start.sh  index.html  justfile  mkdocs.yml
.devspace/: cache.yaml
.github/workflows/: docs.yaml  oci.yaml  rust-clippy.yml  trivy.yml
deployment/: kube-scheduler-rs.yaml
docs/: index.md
examples/: multiple.yaml  pause.yaml  qos.yaml
license/: index.html
search/: search_index.json
src/: main.rs  utils.rs
src/reconciler/: mod.rs
src/scheduler/: filters.rs  mod.rs
src/scheduler/algorithms/: bin_packing.rs  mod.rs
