[package]
name = "kube-scheduler-rs"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]
description = "A custom Kubernetes scheduler implementation"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["cargo", "env", "derive"] }
clap-verbosity-flag = "2.0.1"
color-eyre = "0.6.2"
futures = "0.3.28"
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
kube = { version = "0.80.0", features = ["client", "derive", "runtime"] }
kube_quantity = "0.7.0"
log = "0.4.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"
